--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 SECRET_KEY=elcoeng
-PATH_FILE=http://localhost:2500/uploads/
+PATH_FILE=https://res.cloudinary.com/dmjxvbjlv/image/upload/v1661727915/WaysBuck-Project/
 SERVER_KEY=SB-Mid-server-rFUE2KhA6oBuDzIbIFnwYLES
 CLIENT_KEY=SB-Mid-client-Yi7_qRYG6QBU4X9Z
 EMAIL_SYSTEM=mo.taufiqaa@gmail.com
